patch express application

--- a/app/jxcore/views/layout.jade
+++ b/app/jxcore/views/layout.jade
@@ -1,10 +1,10 @@
-doctype 5
+doctype html
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
-    
+
     hr
-    a(href= '/' ) Home 
+    a(href= '/' ) Home
